--- a/loja-virtual-repository/.classpath
+++ b/loja-virtual-repository/.classpath
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-15">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="D:/Repositórios do Git/aluraJava/mysql-connector-java-8.0.17.jar"/>
+	<classpathentry kind="lib" path="D:/Repositórios do Git/aluraJava/c3p0-0.9.5.4.jar"/>
+	<classpathentry kind="lib" path="D:/Repositórios do Git/aluraJava/mchange-commons-java-0.2.16.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
